--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -292,25 +292,25 @@ TakeRecorderWorldSourceSettings=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Normal,MaterialEditorInstanceConstant.ParameterGroups.Roughness,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup
 MaterialInstanceConstant=
 Actor=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens
-SceneComponent=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Path Tracing.Path Tracing|Lighting Components
+SceneComponent=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 PointLight=Actor.TransformCommon.Transform,PointLight.TransformCommon.Transform
 SpotLight=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens
-StaticMeshActor=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Path Tracing.Path Tracing|Lighting Components
+StaticMeshActor=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 LandscapeStreamingProxy=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens
 DirectionalLight=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform
 PointLightComponent=Actor.TransformCommon.Transform,PointLight.TransformCommon.Transform
 DecalActor=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path,StaticMesh.Collision.Collision
 MeshNaniteSettings=
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Path Tracing.Path Tracing|Lighting Components,Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList
-BrushComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Path Tracing.Path Tracing|Lighting Components,Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList
-RectLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Path Tracing.Path Tracing|Lighting Components,Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
+BrushComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
+RectLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 LocalLightComponent=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens
 SkyLight=SkyLight.TransformCommon.Transform
 Light=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Environment/Cel_Shading
+ContentBrowserTab1.SelectedPaths=/Game/Environment
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -1696,7 +1696,6 @@ FbxSceneImportOptionsSkeletalMesh="\"Object\" \"Object.SkeletalMesh.SkeletalMesh
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=StaticMeshEditor
@@ -1725,39 +1724,37 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
-OpenAssetsAtExit=/Game/Environment/Cel_Shading/Cel_Shader.Cel_Shader
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Environment/Cel_Shading/Cel_Shader
-MRUItem1=/Game/Environment/neon_lights/NEON_LIGHTS
-MRUItem2=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Transparent1
-MRUItem3=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Liquid
-MRUItem4=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/greed_cocktail
-MRUItem5=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A1
-MRUItem6=/Game/Environment/Bar_Assets/Materials/M_BaseTransparent
-MRUItem7=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A
-MRUItem8=/Engine/MapTemplates/Materials/BasicAsset03
-MRUItem9=/Engine/EngineMeshes/BackgroundMaterial
-MRUItem10=/Game/DANTE_SHADER_CHECK
-MRUItem11=/Game/Bar_Assets/Textures/T_Prop_10_A
-MRUItem12=/Game/Environment/Bar_Assets/Materials/MI_Prop_10
-MRUItem13=/Game/Environment/Bar_Assets/Models/SM_Bottle_01
-MRUItem14=/Game/Environment/Pictures/Textures/T_Prop_01_A
-MRUItem15=/Game/Environment/Pictures/Models/SM_Frame_Toad
-MRUItem16=/Game/Environment/Pictures/Models/SM_Frame_Mountains
-MRUItem17=/Game/Environment/Bar_Assets/Materials/M_Light
-MRUItem18=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Opaque
-MRUItem19=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail
-MRUItem20=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
-MRUItem21=/Game/Environment/Bar_Assets/Materials/M_Basematerial
-MRUItem22=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/envy_cocktail
-MRUItem23=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/lust_cocktail
-MRUItem24=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/shaker_middle
-MRUItem25=/Game/Environment/Bar_Assets/Materials/MI_Prop_05
-MRUItem26=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/shaker_top
-MRUItem27=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/jigger
-MRUItem28=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/Shaker_main_body
-MRUItem29=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail
+MRUItem1=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Transparent1
+MRUItem2=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Liquid
+MRUItem3=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/greed_cocktail
+MRUItem4=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A1
+MRUItem5=/Game/Environment/Bar_Assets/Materials/M_BaseTransparent
+MRUItem6=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A
+MRUItem7=/Engine/MapTemplates/Materials/BasicAsset03
+MRUItem8=/Engine/EngineMeshes/BackgroundMaterial
+MRUItem9=/Game/DANTE_SHADER_CHECK
+MRUItem10=/Game/Bar_Assets/Textures/T_Prop_10_A
+MRUItem11=/Game/Environment/Bar_Assets/Materials/MI_Prop_10
+MRUItem12=/Game/Environment/Bar_Assets/Models/SM_Bottle_01
+MRUItem13=/Game/Environment/Pictures/Textures/T_Prop_01_A
+MRUItem14=/Game/Environment/Pictures/Models/SM_Frame_Toad
+MRUItem15=/Game/Environment/Pictures/Models/SM_Frame_Mountains
+MRUItem16=/Game/Environment/Bar_Assets/Materials/M_Light
+MRUItem17=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Opaque
+MRUItem18=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail
+MRUItem19=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
+MRUItem20=/Game/Environment/Bar_Assets/Materials/M_Basematerial
+MRUItem21=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/envy_cocktail
+MRUItem22=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/lust_cocktail
+MRUItem23=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/shaker_middle
+MRUItem24=/Game/Environment/Bar_Assets/Materials/MI_Prop_05
+MRUItem25=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/shaker_top
+MRUItem26=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/jigger
+MRUItem27=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/Shaker_main_body
+MRUItem28=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2901,8 +2898,8 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=89.600 Y=44.000
-WindowSize=X=1326.400 Y=825.600
-InitiallyMaximized=False
+WindowSize=X=1328.000 Y=827.200
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
