--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -174,7 +174,7 @@ MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 CryptoKeysSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 GameplayTagsSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
@@ -302,9 +302,10 @@ DecalActor=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,S
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path,StaticMesh.Collision.Collision
 MeshNaniteSettings=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path,StaticMesh.Collision.Collision
 PostProcessVolume=PostProcessVolume.Lens.Lens
+BrushComponent=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Environment/jess_props
+ContentBrowserTab1.SelectedPaths=/Game/Environment
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -1698,7 +1699,7 @@ RectLight="\"Object\" "
 PostProcessVolume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
@@ -1730,7 +1731,6 @@ RecentAssetEditors=
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
-OpenAssetsAtExit=/Game/Environment/neon_lights/NEON_LIGHTS.NEON_LIGHTS
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Environment/neon_lights/NEON_LIGHTS
@@ -2824,8 +2824,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/Environment/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=116.000 Y=402.000
-WindowSize=X=1298.000 Y=738.000
+ScreenPosition=X=116.000 Y=401.600
+WindowSize=X=1300.800 Y=740.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2842,7 +2842,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../GitHub/7-Sins/Project_7_Sins/Content/Environment/FirstPerson/Maps
+UNR=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/Environment/FirstPerson/Maps
 BRUSH=../../../../../../Users/harry/Documents/Uni/Advanced Specialised Project/7-Sins/Project_7_Sins/Content/
 FBX=../../../../../../Users/harry/Documents/Uni/Advanced Specialised Project/7-Sins/Project_7_Sins/Content/
 FBXAnim=../../../../../../Users/harry/Documents/Uni/Advanced Specialised Project/7-Sins/Project_7_Sins/Content/
@@ -2857,8 +2857,8 @@ Project=C:/Program Files/Epic Games/UE_5.3/
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/Unreal/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/Unreal/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [PathColor]
