Copied Jess' neons

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -175,7 +175,7 @@ MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 CryptoKeysSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 GameplayTagsSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
@@ -1693,7 +1693,7 @@ FbxSceneImportOptionsStaticMesh="\"Object\" "
 FbxSceneImportOptionsSkeletalMesh="\"Object\" \"Object.SkeletalMesh.SkeletalMesh|Thresholds\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
@@ -1724,37 +1724,39 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
+OpenAssetsAtExit=/Game/Environment/neon_lights/NEON_LIGHTS.NEON_LIGHTS
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Environment/Cel_Shading/Cel_Shader
-MRUItem1=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Transparent1
-MRUItem2=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Liquid
-MRUItem3=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/greed_cocktail
-MRUItem4=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A1
-MRUItem5=/Game/Environment/Bar_Assets/Materials/M_BaseTransparent
-MRUItem6=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A
-MRUItem7=/Engine/MapTemplates/Materials/BasicAsset03
-MRUItem8=/Engine/EngineMeshes/BackgroundMaterial
-MRUItem9=/Game/DANTE_SHADER_CHECK
-MRUItem10=/Game/Bar_Assets/Textures/T_Prop_10_A
-MRUItem11=/Game/Environment/Bar_Assets/Materials/MI_Prop_10
-MRUItem12=/Game/Environment/Bar_Assets/Models/SM_Bottle_01
-MRUItem13=/Game/Environment/Pictures/Textures/T_Prop_01_A
-MRUItem14=/Game/Environment/Pictures/Models/SM_Frame_Toad
-MRUItem15=/Game/Environment/Pictures/Models/SM_Frame_Mountains
-MRUItem16=/Game/Environment/Bar_Assets/Materials/M_Light
-MRUItem17=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Opaque
-MRUItem18=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail
-MRUItem19=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
-MRUItem20=/Game/Environment/Bar_Assets/Materials/M_Basematerial
-MRUItem21=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/envy_cocktail
-MRUItem22=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/lust_cocktail
-MRUItem23=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/shaker_middle
-MRUItem24=/Game/Environment/Bar_Assets/Materials/MI_Prop_05
-MRUItem25=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/shaker_top
-MRUItem26=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/jigger
-MRUItem27=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/Shaker_main_body
-MRUItem28=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail
+MRUItem0=/Game/Environment/neon_lights/NEON_LIGHTS
+MRUItem1=/Game/Environment/Cel_Shading/Cel_Shader
+MRUItem2=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Transparent1
+MRUItem3=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Liquid
+MRUItem4=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/greed_cocktail
+MRUItem5=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A1
+MRUItem6=/Game/Environment/Bar_Assets/Materials/M_BaseTransparent
+MRUItem7=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A
+MRUItem8=/Engine/MapTemplates/Materials/BasicAsset03
+MRUItem9=/Engine/EngineMeshes/BackgroundMaterial
+MRUItem10=/Game/DANTE_SHADER_CHECK
+MRUItem11=/Game/Bar_Assets/Textures/T_Prop_10_A
+MRUItem12=/Game/Environment/Bar_Assets/Materials/MI_Prop_10
+MRUItem13=/Game/Environment/Bar_Assets/Models/SM_Bottle_01
+MRUItem14=/Game/Environment/Pictures/Textures/T_Prop_01_A
+MRUItem15=/Game/Environment/Pictures/Models/SM_Frame_Toad
+MRUItem16=/Game/Environment/Pictures/Models/SM_Frame_Mountains
+MRUItem17=/Game/Environment/Bar_Assets/Materials/M_Light
+MRUItem18=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Opaque
+MRUItem19=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail
+MRUItem20=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
+MRUItem21=/Game/Environment/Bar_Assets/Materials/M_Basematerial
+MRUItem22=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/envy_cocktail
+MRUItem23=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/lust_cocktail
+MRUItem24=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/shaker_middle
+MRUItem25=/Game/Environment/Bar_Assets/Materials/MI_Prop_05
+MRUItem26=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/shaker_top
+MRUItem27=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/jigger
+MRUItem28=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/Shaker_main_body
+MRUItem29=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
