--- a/Project_7_Sins/Config/DefaultEngine.ini
+++ b/Project_7_Sins/Config/DefaultEngine.ini
@@ -256,6 +256,8 @@ ManualIPAddress=
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel6,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="Dart")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel7,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Cat")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel8,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="PoolTable")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel9,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="PoolBall")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel10,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="PoolTableEdge")
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="NPC",Response=ECR_Overlap),(Channel="Card",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="NPC",Response=ECR_Overlap),(Channel="Card",Response=ECR_Overlap)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
