--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -691,7 +691,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Environment/jess_props
+ContentBrowserDrawer.SelectedPaths=/Game/Environment/Cards_Materials/Maps
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2010,7 +2010,7 @@ InstancedStaticMeshComponent="\"Object\" "
 BP_CardPile_C="\"Object\" \"Object.Actor.Tags\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
-MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
+MaterialInterface="\"Object\" "
 MaterialExpressionConstant3Vector="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionVectorParameter="\"Object\" "
@@ -2295,9 +2295,11 @@ AnimGraphNode_LookAt="\"Object\" \"Object.Settings.Node.LookAt_Axis\" \"Object.S
 AnimGraphNode_BlendListByBool="\"Object\" "
 WBP_Pool_Start_Game_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 PhysicalMaterial="\"Object\" "
+MaterialExpressionTextureSampleParameter2D="\"Object\" "
+MaterialExpressionTextureSampleParameter="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 None=======
 None=======
@@ -2316,6 +2318,14 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2338,57 +2348,38 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Mini_Games/Pool/Pool_Table/BP_PoolTable.BP_PoolTable
-OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_Pool_Game_Manager.BP_Pool_Game_Manager
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Pool.IMC_Pool
-OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_CueBall.BP_CueBall
-OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_PoolBall.BP_PoolBall
-OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_Pool_Pocket.BP_Pool_Pocket
-OpenAssetsAtExit=/Game/Environment/jess_props/POOL/PhysM_PoolBall.PhysM_PoolBall
-OpenAssetsAtExit=/Game/Environment/jess_props/POOL/PhysM_PoolTable.PhysM_PoolTable
-OpenAssetsAtExit=/Game/Mini_Games/Pool/BPI_Pool.BPI_Pool
-OpenAssetsAtExit=/Game/Mini_Games/Pool/Pool_Table/PhysM_TableEdges.PhysM_TableEdges
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Mini_Games/Pool/Pool_Table/PhysM_TableEdges
-MRUItem1=/Game/Mini_Games/Pool/BPI_Pool
-MRUItem2=/Game/Mini_Games/Pool/BP_Pool_Pocket
-MRUItem3=/Game/Environment/jess_props/POOL/PhysM_PoolTable
-MRUItem4=/Game/Environment/jess_props/POOL/PhysM_PoolBall
-MRUItem5=/Game/Environment/jess_props/POOL/Pool_Ball_2
-MRUItem6=/Game/Mini_Games/Pool/BP_CueBall
-MRUItem7=/Game/Mini_Games/Pool/BP_PoolBall
-MRUItem8=/Game/UI/Diegetic/Mini_Games/Pool/WBP_Pool_Start_Game
-MRUItem9=/Game/Player/Input/IMC/IMC_Pool
-MRUItem10=/Game/Player/BP_Player
-MRUItem11=/Game/Mini_Games/Pool/BP_Pool_Game_Manager
-MRUItem12=/Game/Mini_Games/Pool/Pool_Table/BP_PoolTable
-MRUItem13=/Game/Environment/jess_props/props_material_jess
-MRUItem14=/Game/Environment/jess_props/7_SINS_SIGN
-MRUItem15=/Game/Maps/Main_Level/Main_Level
-MRUItem16=/Game/Environment/Bar_Assets/Models/Combined_1A2D2284
-MRUItem17=/Game/Environment/jess_props/POOL/Pool_Ball_1
-MRUItem18=/Game/Mini_Games/Darts/BP_Dart
-MRUItem19=/Game/NPCs/Models/Dante_v2/Dante_export_UE
-MRUItem20=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem21=/Game/NPCs/BP_NPC
-MRUItem22=/Game/NPCs/Models/Dante_v2/Dante_export_UE_Skeleton
-MRUItem23=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem24=/Game/Mini_Games/Darts/Dart_Board/BP_Dart_Score_Point
-MRUItem25=/Game/NPCs/Models/Dante_v2/Dante_export_UE_CtrlRig
-MRUItem26=/Game/Maps/Test_Level/ThirdPersonMap
-MRUItem27=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
-MRUItem28=/Game/Mini_Games/Darts/Dart_Board/BP_Dart_Board
-MRUItem29=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
+MRUItem0=/Game/Environment/Cards_Materials/Lust_Deck_Material
+MRUItem1=/Game/Environment/Cards_Materials/Greed_Deck_Material
+MRUItem2=/Game/Environment/Cards_Materials/Gluttony_Deck_Material
+MRUItem3=/Game/Environment/Cards_Materials/Envy_Deck_Material
+MRUItem4=/Game/Environment/Cards_Materials/Sloth_Deck_Material
+MRUItem5=/Game/Environment/Cards_Materials/Pride_Deck_Material
+MRUItem6=/Game/Environment/Cards_Materials/Wrath_Deck_Material
+MRUItem7=/Game/Environment/Cards_Materials/Master_Cards
+MRUItem8=/Game/Mini_Games/Pool/Pool_Table/PhysM_TableEdges
+MRUItem9=/Game/Mini_Games/Pool/BPI_Pool
+MRUItem10=/Game/Mini_Games/Pool/BP_Pool_Pocket
+MRUItem11=/Game/Environment/jess_props/POOL/PhysM_PoolTable
+MRUItem12=/Game/Environment/jess_props/POOL/PhysM_PoolBall
+MRUItem13=/Game/Environment/jess_props/POOL/Pool_Ball_2
+MRUItem14=/Game/Mini_Games/Pool/BP_CueBall
+MRUItem15=/Game/Mini_Games/Pool/BP_PoolBall
+MRUItem16=/Game/UI/Diegetic/Mini_Games/Pool/WBP_Pool_Start_Game
+MRUItem17=/Game/Player/Input/IMC/IMC_Pool
+MRUItem18=/Game/Player/BP_Player
+MRUItem19=/Game/Mini_Games/Pool/BP_Pool_Game_Manager
+MRUItem20=/Game/Mini_Games/Pool/Pool_Table/BP_PoolTable
+MRUItem21=/Game/Environment/jess_props/props_material_jess
+MRUItem22=/Game/Environment/jess_props/7_SINS_SIGN
+MRUItem23=/Game/Maps/Main_Level/Main_Level
+MRUItem24=/Game/Environment/Bar_Assets/Models/Combined_1A2D2284
+MRUItem25=/Game/Environment/jess_props/POOL/Pool_Ball_1
+MRUItem26=/Game/Mini_Games/Darts/BP_Dart
+MRUItem27=/Game/NPCs/Models/Dante_v2/Dante_export_UE
+MRUItem28=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem29=/Game/NPCs/BP_NPC
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2820,6 +2811,7 @@ TextureImportSettings.VirtualTextures=True
 TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
@@ -5338,9 +5330,13 @@ WBP_Pool_Start_Game_C.Navigation=True
 PhysicalMaterial.PhysicalMaterial=True
 PhysicalMaterial.Advanced=True
 PhysicalMaterial.PhysicalProperties=True
-UMGEditorProjectSettings.Designer =True
 PrimitiveComponent.Physics=True
 PrimitiveComponent.Collision=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -5571,6 +5567,9 @@ None=======
 /Game/Environment/jess_props/POOL/PhysM_PoolTable.PhysM_PoolTable=0
 /Game/Mini_Games/Pool/BPI_Pool.BPI_Pool=0
 /Game/Mini_Games/Pool/Pool_Table/PhysM_TableEdges.PhysM_TableEdges=0
+/Game/Environment/Cards_Materials/Master_Cards.Master_Cards=1
+/Game/Environment/Cards_Materials/Wrath_Deck_Material.Wrath_Deck_Material=1
+/Game/Environment/Cards_Materials/Pride_Deck_Material.Pride_Deck_Material=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -6190,7 +6189,6 @@ TreeViewWidth=0.300000
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
@@ -6414,7 +6412,7 @@ Property=0.5
 Value=1
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
