--- a/Project_7_Sins/Saved/Config/ConsoleHistory.ini
+++ b/Project_7_Sins/Saved/Config/ConsoleHistory.ini
@@ -2,4 +2,5 @@
 History=r.Streaming.PoolSize 3000
 History=r.Streaming.PoolSize 1000
 History=r.Streaming.PoolSize 5000
+History=r.Streaming.PoolSize 7000
 
