--- a/Project_7_Sins/Saved/Config/ConsoleHistory.ini
+++ b/Project_7_Sins/Saved/Config/ConsoleHistory.ini
@@ -3,4 +3,5 @@ History=r.Streaming.PoolSize 3000
 History=r.Streaming.PoolSize 1000
 History=r.Streaming.PoolSize 5000
 History=r.Streaming.PoolSize 7000
+History=r.Streaming.PoolSize 6000
 
