Tuna model added to game and schrodinger and leading cat actors.
Tuna model added to the game in a shared cat assets folder in misc mechanics folder.
Everything seems good with it idk using the same settings as the other models for smoothness.
Changed the skeletal mesh models for the leading cat and schrodingers cat actors to this new tuna model.

Also found how to circumvent the streaming pool restrictions for textures.
Command: r.Streaming.Poolsize and then an amount relative to how many gbs your GPU has I had to use 8000mb for it to load all textures.

--- a/Project_7_Sins/Saved/Config/ConsoleHistory.ini
+++ b/Project_7_Sins/Saved/Config/ConsoleHistory.ini
@@ -3,5 +3,9 @@ History=r.Streaming.PoolSize 3000
 History=r.Streaming.PoolSize 1000
 History=r.Streaming.PoolSize 5000
 History=r.Streaming.PoolSize 7000
+History=r.Streaming.PoolSize 4000
+History=r.Streaming.PoolSize4000
+History=r.Streaming.PoolSize
 History=r.Streaming.PoolSize 6000
+History=r.Streaming.PoolSize 8000
 
